# manufacturing_cycle

./: index.html  main.py  pyproject.toml
