[project]
name = "manufacturing-cycle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "clickhouse-driver>=0.2.0",
    "pydantic>=2.10.0",
    "pandas>=3.0.4",
]
